--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,10 +6,17 @@
   padding: 0.9rem 10rem;
   align-items: center;
   &__menu {
-    opacity: 0.5;
-    margin-right: 1rem;
+    margin-right: 1.25rem;
   }
   &__logo {
     margin-right: auto;
+  }
+
+  &__guestMenu .menu__item {
+    margin-right: 1.5rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
