--- a/src/components/link/link.pug
+++ b/src/components/link/link.pug
@@ -1,3 +1,12 @@
+//-
+    common
+    options.text - текст - содержимое кнопки
+    options.href - адрес ссылки для тега: <a> (в том числе оформленного как кнопка (присутствует только у <ссылок>))
+    options.dropdown - флаг true если при наведении ссылку выпадает отдельное меню
+    options.dropdownContent - содержимое выпадашки - массив ссылок
+
+    depth - параметр определяющий "глубину" вложенности(рекурсии миксина) для добавления специальных классов
+
 mixin link(options, depth)
     - var currentDepth = depth || 0;
 
