--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,6 +5,7 @@
   flex: 1 0 auto;
   padding: 0.9rem 10rem;
   align-items: center;
+  box-shadow: 0 5px 15px -10px rgba(0, 0, 0, 0.5);
   &__menu {
     margin-right: 1.25rem;
   }
@@ -12,7 +13,7 @@
     margin-right: auto;
   }
 
-  &__guestMenu .menu__item {
+  &__guestMenu .main-navigation__item {
     margin-right: 1.5rem;
 
     &:last-child {
