--- a/src/pages/base/base.pug
+++ b/src/pages/base/base.pug
@@ -12,6 +12,7 @@ html
         meta(name='viewport', content="initial-scale=1.0, width=device-width")
         title
             block title
+        block links
     body
         +layout()
             +layout__header()
