--- a/src/pages/base/base-data.pug
+++ b/src/pages/base/base-data.pug
@@ -3,7 +3,7 @@
   locals.headerMenuItems = [
     {
       text: 'О нас',
-      href: '/mock-address/change-me',
+      href: '/UI.html',
       isActive: true
     }, {
       text: 'Услуги',
@@ -12,15 +12,15 @@
       dropdownContent: [
         {
           text: 'Хамам',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         },
         {
           text: 'Игровой зал',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         },
         {
           text: 'Библиотека',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         }
       ]
 
@@ -37,7 +37,7 @@
       dropdownContent: [
         {
           text: 'Пользовательское Соглашение',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         },
         {
           text: 'Согласие на обработку персональных данных',
@@ -46,11 +46,11 @@
           dropdownContent: [
             {
               text: 'Паспортные данные',
-              href: '/mock-address/change-me',
+              href: '/mock-address/change-me'
             },
             {
               text: 'Медицинские данные',
-              href: '/mock-address/change-me',
+              href: '/mock-address/change-me'
             },
           ]
         }
@@ -62,13 +62,13 @@
   locals.guestMenuItems = [
     {
       text: 'Войти',
-      href: '/mock-address/change-me',
+      href: '/sign-in.html',
       buttonMode: true,
       fillingStyle: "hollow",
       widthStyle: "fit"
     }, {
       text: 'Зарегистрироваться',
-      href: '/mock-address/change-me',
+      href: '/sign-up.html',
       buttonMode: true,
       fillingStyle: "filled",
       widthStyle: "fit"
@@ -91,7 +91,7 @@
           href: '/mock-address/change-me',
         },  {
           text: 'Услуги',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         },
       ]
     },
@@ -109,7 +109,7 @@
           href: '/mock-address/change-me',
         }, {
           text: 'Инвесторы',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         },
       ]
     },
@@ -124,7 +124,7 @@
           href: '/mock-address/change-me',
         }, {
           text: 'Связь с нами',
-          href: '/mock-address/change-me',
+          href: '/mock-address/change-me'
         }
       ]
     },
@@ -140,6 +140,6 @@
         href: '/mock-address/change-me',
       },  {
         text: 'instagram',
-        href: '/mock-address/change-me',
+        href: '/mock-address/change-me'
       },
   ]
