--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -36,15 +36,16 @@ $dropdown-width: 15rem;
 
   // Выпадашка
   &__dropdown-list {
-    border: 1px solid $dark-shade_0-25;
-    position: absolute;
-    top: 80%;
     width: $dropdown-width;
+    top: 80%;
+    position: absolute;
+    border: 1px solid $dark-shade_0-25;
 
     display: none;
     list-style: none;
     margin: 0;
     padding: 0.5rem 0;
+    z-index: 1;
 
     flex-direction: column;
 
