--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,6 +1,6 @@
-.main {
+.index {
   position: relative;
-  padding: 70px 140px 385px;
+  padding: 72px 140px 385px;
   width: 100%;
 
   &__text-lead {
@@ -12,64 +12,7 @@
     text-align: right;
   }
 
-
-    // Фоновые изображения - слайды
-  & .slide {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) inset ;
-
-    &:nth-child(1) {
-      background: url('./img/image3@1x.jpg') no-repeat ;
-      animation: slide 30s linear 20s infinite;
-      opacity: 0;
-    }
-
-    &:nth-child(2) {
-      background: url('./img/image2@1x.jpg') no-repeat;
-      animation: slide 30s linear 10s infinite;
-      opacity: 0;
-    }
-
-    &:nth-child(3) {
-      background: url('./img/image@1x.jpg') no-repeat;
-      animation: slide 30s linear  infinite;
-      opacity: 0;
-    }
-  }
-
+  //& .slider__slide-1 {
+  //  animation-delay: 20s;
+  //}
 }
-
-
-
-
-
-//&--bg-2 {
-//  background: url('./img/image2@1x.jpg') no-repeat;
-//}
-//&--bg-3 {
-//  background: url('./img/image3@1x.jpg') no-repeat;
-//}
-
-@keyframes slide {
-  0%{
-    opacity: 0
-  }
-
-
-  8%,33%{
-    opacity: 1
-  }
-
-  41%,100% {
-    opacity: 0;
-  }
-
-}
-
-
