Создал блок room-card

--- a/src/pages/base/base-data.pug
+++ b/src/pages/base/base-data.pug
@@ -7,7 +7,7 @@
       isActive: true
     }, {
       text: 'Услуги',
-      href: '/mock-address/change-me',
+      href: '/catalog.html',
       dropdown: true,
       dropdownContent: [
         {
